--- a/index.ipynb
+++ b/index.ipynb
@@ -48,13 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-2-2886830efe44>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-2886830efe44>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    # conditionals go here\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "if temperature > \n",
+    "if temperature > 80:\n",
     "# conditionals go here"
    ]
   },
