--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,8 @@
     "is_it_hot = None\n",
     "if temperature > 80:\n",
     "    is_it_hot = \"It is so hot out!\"\n",
-    "# conditionals go here"
+    "else:\n",
+    "    is_it_hot -  # conditionals go here"
    ]
   },
   {
