--- a/index.ipynb
+++ b/index.ipynb
@@ -48,25 +48,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-2-2886830efe44>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-2886830efe44>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    # conditionals go here\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
     "if temperature > 80:\n",
     "    is_it_hot = \"It is so hot out!\"\n",
     "else:\n",
-    "    is_it_hot -  # conditionals go here"
+    "    is_it_hot = \"This is nothing! Bring on the heat.\"  # conditionals go here"
    ]
   },
   {
