--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "if\n",
+    "[\"Monday\"]\n",
     "\n",
     "# conditionals go here"
    ]
