--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "[\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"\"]\n",
+    "[\"Sun\"\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\"]\n",
     "\n",
     "# conditionals go here"
    ]
