Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,8 @@
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "[\"Sun\"\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\"]\n",
+    "[\"Sunday\",\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\"]\n",
+    "\n",
     "\n",
     "# conditionals go here"
    ]
