Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,6 +78,7 @@
     "day_of_the_week = None\n",
     "[\"Sunday\",\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\"]\n",
     "\n",
+    "day_of_the_week = \n",
     "\n",
     "# conditionals go here"
    ]
