--- a/index.ipynb
+++ b/index.ipynb
@@ -76,9 +76,9 @@
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "[\"Sunday\",\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\"]\n",
+    "days = [\"Sunday\",\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\"]\n",
     "\n",
-    "day_of_the_week = \n",
+    "day_of_the_week = days\n",
     "\n",
     "# conditionals go here"
    ]
