--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
     "day_of_the_week = None\n",
     "days = [\"Sunday\",\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\"]\n",
     "\n",
-    "day_of_the_week = days\n",
+    "day_of_the_week = days[today_is-1]\n",
     "\n",
     "# conditionals go here"
    ]
