Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -70,9 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Wednesday'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
@@ -80,7 +91,8 @@
     "\n",
     "day_of_the_week = days[today_is-1]\n",
     "\n",
-    "# conditionals go here"
+    "# conditionals go here\n",
+    "day_of_the_week"
    ]
   },
   {
