Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,6 +111,8 @@
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
+    "\n",
+    "if string.endswith(sub_string)\n",
     "# conditionals go here"
    ]
   },
