--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,10 @@
     "sub_string = \"on\"\n",
     "ends_with = None\n",
     "\n",
-    "if string.endswith(sub_string)\n",
+    "if string.endswith(sub_string):\n",
+    "    ends_with = True\n",
+    "else\n",
+    "    ends_with =\n",
     "# conditionals go here"
    ]
   },
